Fix graphic glitch causing user icon to appear in wrong position

--- a/app/assets/stylesheets/components/sidebar.scss
+++ b/app/assets/stylesheets/components/sidebar.scss
@@ -13,7 +13,7 @@
   overflow-x: hidden;
   text-overflow: ellipsis;
 
-  >div {
+  .group {
     height: auto;
     i {
       color: $light-purple;
